# kb-handler

./: pyproject.toml
src/kb_handler/: __init__.py
src/kb_handler/paper_extraction/builders/: paper_builder.py  paper_knowledgebase_builder.py  statements_builder.py
src/kb_handler/paper_extraction/config/: llm_config.py
src/kb_handler/paper_extraction/data_models/: paper.py  paper_knowledgebase.py
src/kb_handler/paper_extraction/data_models/statements/: axiom.py  base_corable.py  base_provable.py  base_statement.py  corollary.py  definition.py  lemma.py  proof.py  statements.py  theorem.py
src/kb_handler/paper_extraction/extraction/statements_extraction/: statements_extraction.py
src/kb_handler/paper_extraction/extraction/tex_extraction/: arxiv_extraction.py
src/kb_handler/paper_extraction/utils/: openai.py  tex_processing.py
